Fixed #323 - transactions page datepicker has wrong color in light theme

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -18,6 +18,10 @@ main {
     flex: 1 0 auto;
 }
 
+.text-color {
+    color: #212121;
+}
+
 .budgetmaster-blue {
     background-color: #2E79B9;
 }
